# square-images.rs

./: .gitignore  Cargo.toml  LICENSE-MIT  index.html  styles.css
square-images/: .gitignore  Cargo.toml
square-images/src/: lib.rs  main.rs
src/: app.rs  main.rs
src-tauri/: Cargo.toml  tauri.conf.json
