[package]
name = "square-images"
version = "0.1.0"
edition = "2021"
authors = ["James Wolff <james.wolff0@gmail.com>"]
homepage = "https://github.com/jwolff52/square-images.rs"
repository = "https://github.com/jwolff52/square-images.rs"
readme = "README.md"
license = "MIT or Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
web-view = "0.7.3"
hyper = { version = "0.14.26", features = ["full"] }
rust-embed = "6.6.1"
futures = "0.3.28"
tokio = { version = "1.27.0", features = ["full"] }
