[package]
name = "square-images-ui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
yew = { version = "0.20", features = ["csr"] }
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.4"
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = ["File", "DragEvent", "DataTransfer"] }
js-sys = "0.3"
gloo-console = "0.2.3"
image = "0.24.6"
base64 = "0.21.0"
gloo-file = "0.2.3"
gloo-events = "0.1.2"
yew-bootstrap = "0.5.14"

[workspace]
members = ["src-tauri"]
