[package]
name = "square-images"
version = "0.1.0"
description = "Make your image a square with a tiled background"
authors = ["James Wolff <james.wolff0@gmail.com>"]
license = "MIT or Apache-2.0"
repository = "https://github.com/jwolff52/square-images.rs"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.2", features = [] }

[dependencies]
tauri = { version = "1.2", features = ["shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
